# heal

./: .env  Cargo.toml  package-lock.json
crates/app/: Cargo.toml
crates/app/certs/: cert.pem  key.pem
crates/app/src/: handlers.rs  main.rs  routes..bak.rs  routes.rs  state.rs  trace.rs
crates/app/src/handlers/: article_handler.rs  auth_handler.rs  menu_handler.rs  user_handler.rs
crates/app/src/routes/: articles.rs  auth.rs  menus.rs  mod.rs  users.rs
crates/app/src/trace/: middleware.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20260527_create_users.sql
crates/infrastructure/src/: db.rs  dto.rs  entity.rs  errors.rs  lib.rs  models.rs  service.rs
crates/infrastructure/src/db/: admin.rs  article  article.rs  articles.rs  menu.rs  menus.rs  pool.rs  user.rs  users.rs
crates/infrastructure/src/dto/: admin.rs  article.rs  articles.rs  auth.rs  common.rs  extractor.rs  menu.rs  menus.rs  user.rs  users.rs  utils.rs
crates/infrastructure/src/service/: admin_service.rs  article_service.rs  articles_service.rs  auth_service.rs  menu_service.rs  menus_service.rs  users_service.rs
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  bootstrap.ts  main.ts
frontend/src/api/: admin.ts  article.ts  auth.ts
frontend/src/components/: Login.vue
frontend/src/components/layout/: Header.vue  Sidebar.vue
frontend/src/layout/: BasicLayout.vue  Header.vue  Sidebar.vue  index.vue
frontend/src/router/: dynamic-register.ts  dynamic.ts  guard.ts  index.ts
frontend/src/store/: user.ts
frontend/src/utils/: dynamicRoute.ts  request.ts
frontend/src/views/: AdminList.vue  Home.vue  Login.vue
frontend/src/views/admin/: AdminList.vue  index.vue
frontend/src/views/admin/components/: AdminForm.vue  AdminTable.vue
frontend/src/views/article/: Edit.vue  List.vue  index.vue
frontend/src/views/article/components/: ArticleForm.vue  ArticleTable.vue
frontend/src/views/articles/: index.vue
frontend/src/views/dashboard/: index.vue
frontend/src/views/home/: index.vue
frontend/src/views/login/: index.vue
frontend/src/views/menu/components/: MenuForm.vue  MenuTable.vue
frontend/src/views/menus/: index.vue
frontend/src/views/menus/components/: MenuForm.vue
frontend1/: package-lock.json
frontend1/src/: main.ts
frontend1/src/api/: menu.ts
frontend1/src/router/: dynamic.ts
frontend1/src/store/: user.ts
frontend1/src/views/article/components/: ArticleTable.vue
