[workspace]
members = [
    "crates/app", "crates/infrastructure",
    #"crates/domain",
    "crates/infrastructure"
]
resolver = "2"

[workspace.dependencies]
# 👇 将本地的 infrastructure 注册进工作区依赖
infrastructure = { path = "crates/infrastructure" }
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["tracing"] }
axum-server = { version = "0.8", features = ["tls-rustls"] } # 用于 HTTPS
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "2.0"
hyper = { version = "1.9", features = ["full"] }             # 用于 HTTP 重定向
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros","chrono"] }
anyhow = "1.0"
dotenvy = "0.15"
bcrypt = "0.19.1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
validator = { version = "0.20.0", features = ["derive"] }