[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
sqlx = { workspace = true }
serde = {workspace = true }
chrono = {workspace = true }
tracing = {workspace = true }
tracing-subscriber = { workspace = true }
thiserror = {workspace =true }
bcrypt = { workspace = true }
jsonwebtoken = {workspace =true }
validator = {workspace =true }